# ellipsoid

./: CMakeLists.txt  README.md
src/: Application.cpp  Application.h  CMakeLists.txt  Crystal.cu  Crystal.h  CrystalKernel.cu  GlDrawing.cpp  GlDrawing.h  GlUtils.cpp  GlUtils.h  RayCasting.cu  RayCasting.h  RayCastingKernel.cu  buffer.h  constants.h  cuda_util.cpp  cuda_util.h  main.cpp
